spacing issue in about

--- a/css/about.css
+++ b/css/about.css
@@ -17,6 +17,11 @@ main div.about {
     display: block;
     background-color: #eff1ec;
 }
+main div.about p{
+    margin: 1rem;
+    padding: 1rem;
+}
+
 
 @media only screen and (max-width:480px) {
 
